feat(city): add city controller

--- a/Homeverse.API/Homeverse.API.csproj
+++ b/Homeverse.API/Homeverse.API.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -15,10 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\Homeverse.Application\Homeverse.Application.csproj" />
     <ProjectReference Include="..\Homeverse.Infrastructure\Homeverse.Infrastructure.csproj" />
   </ItemGroup>
 
