feat(cache): add redis cache service

--- a/Homeverse.Infrastructure/Homeverse.Infrastructure.csproj
+++ b/Homeverse.Infrastructure/Homeverse.Infrastructure.csproj
@@ -13,9 +13,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.8" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Homeverse.Application\Homeverse.Application.csproj" />
     <ProjectReference Include="..\Homeverse.Domain\Homeverse.Domain.csproj" />
   </ItemGroup>
 
